bugfix/overflow x in page content

--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -134,6 +134,7 @@ header#desktop-header {
 #content {
     position: relative;
     top: 10vh;
+    overflow-x: hidden;
 }
 
 @media (min-width: 992px) {
